[gd_scene load_steps=2 format=3 uid="uid://b4so6n5ygoi06"]

[ext_resource type="Script" uid="uid://b6vu0xd5djcft" path="res://inventory_slot.gd" id="1_15w06"]

[node name="InventorySlot" type="Panel"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15w06")

[node name="ItemTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1880.0
offset_bottom = -1057.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemName" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
autowrap_mode = 2

[node name="BonusLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
autowrap_mode = 2
